# imgio

./: .pylintrc  .ruff.toml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  imgio.py  pfm.py  pnm.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
imgio/: __init__.py  imgio.py  pfm.py  pnm.py  raw.py
test/: test_imgio.py
