[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgio"
description="Easy image reading & writing"
authors = [{name = "Tomi Aarnio", email = "tomi.p.aarnio@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "imageio",
]

[project.urls]
Homepage = "http://github.com/toaarnio/imgio"

[tool.hatch.version]
path = "imgio/version.py"

[tool.hatch.build]
include = ["imgio"]
exclude = ["*~"]

[tool.pytest.ini_options]
pythonpath = "imgio"
